# onsite-prep

python-backend/: database.db  pyproject.toml
python-backend/python_backend/: app.py  db.py  main.py
python-backend/python_backend/endpoints/: decks.py
python-backend/python_backend/models/: decks.py
python-backend/python_backend/queries/: decks.py
react-frontend/: bun.lockb  package.json
react-frontend/src/: App.tsx  Home.tsx  trpc.ts
react-frontend/src/models/: decks.ts
react-frontend/src/screens/Home/: Home.tsx
react-frontend/src/screens/Home/components/: AllDecksTable.tsx  CreateDeckModal.tsx
ts-backend/: README.md  app-router.ts  bun.lockb  index.ts  package.json
ts-backend/endpoints/: decks.ts
ts-backend/prisma/: database.db  schema.prisma
ts-backend/prisma/migrations/20240825224934_init/: migration.sql
