[tool.poetry]
name = "python-backend"
version = "0.1.0"
description = ""
authors = ["Clark Sandholtz <clarksandholtz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlmodel = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
